--- a/src/org/syncon/popups/view/popups/default_popups/popup_info.mxml
+++ b/src/org/syncon/popups/view/popups/default_popups/popup_info.mxml
@@ -12,8 +12,7 @@
     </mx:states>
     <mx:Script>
         <![CDATA[
-        	import sss.Shelpers.ui.SearchOnEnter;
-        	import sss2.Ecloseto.EclosetoModel;
+        	//import sss.Shelpers.ui.SearchOnEnter;
         	/**
         	 * An  alert box that displays text messages. 
 			* Can be set for large/small sizing
@@ -26,8 +25,7 @@
 	        import sss.Shelpers.Shelpers.Shelpers;
 	        import sss.Shelpers.Shelpers.ShelpersUI;
 	
-	        public var  eclosetoModel: EclosetoModel = EclosetoModel.getInstance();
-			public var actionOnEnter :  SearchOnEnter
+			//public var actionOnEnter :  SearchOnEnter
 	
 	        [Bindable]public var tTitle:String = '';
 	        /**
@@ -44,7 +42,7 @@
 	                this.txtTxt.height = this.txtTxt_height
 	                this.txtTxt.width = this.txtTxt_width
 	            }
-	            this.actionOnEnter = new SearchOnEnter( this.btnOk, this.close ) 
+	            //this.actionOnEnter = new SearchOnEnter( this.btnOk, this.close ) 
 	        }
 	
 	        public var popupCode:PopupCode;
@@ -58,8 +56,6 @@
 	
 	        public function show(): void
 	        {
-	            this.eclosetoModel.uiModel.modalOpen(this)  
-	            this.eclosetoModel.popupModal.popupCode.bringToFront()
 	            //var b:Object = [this.EclosetoModel.popupModal, this.EclosetoModel.popupModal.visible]
 	            this.popupCode.open(false, true)
 	            this.popupCode.stickTo(this.parentApplication as UIComponent, 'c', true)
@@ -72,7 +68,6 @@
 	            this.callLater(this.returnFocus)
 	            
 	            this.popupCode.close()
-	            this.eclosetoModel.uiModel.modalClose(this)
 	        }
 	
 	        public function returnFocus(): void
@@ -167,7 +162,9 @@
 	    
 	    <mx:Label id="titleTxt" text="{this.tTitle}" fontSize="14" />
 	    
-	    <ui:TextArea2 id="txtTxt" fontSize="12" updateComplete="{this.onChangeText()}" condenseWhite="true"
+	    <mx:TextArea 
+	    	 backgroundAlpha="0.0" borderStyle="none"
+	    	id="txtTxt" fontSize="12" updateComplete="{this.onChangeText()}" condenseWhite="true"
 	        color="0" fontWeight="bold"  width="600" height="356"   />
 	    <mx:HBox horizontalAlign="center" width="100%">
 	        <mx:Button label="Ok" styleName="goButton" click="close()" id="btnOk" bottom="0" />
